tests/fixtures/syntax/valid/stdout_empty_expectation.repor
case "stdout empty" {
  $ true
  assert {
    stdout empty
  }
}
