tests/fixtures/syntax/invalid/empty_assertion_block.repor
case "empty assertion" {
  $ true
  assert {
  }
}
